--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,43 @@
 
     <!-- Begin page content -->
     <div class="container">
+      <%= nav_bar fixed: :top, brand: "Official Tickets", responsive: true do %>
+        <%= menu_group do %>
+          <% if current_event_manager %>
+            <%= menu_item "Home", event_managers_root_path %>
+          <% elsif current_customer_service %>
+            <%= menu_item "Home", customer_services_root_path %>
+          <% else %>
+            <%= menu_item "Home", root_path %>
+          <%end %>
+          <%= menu_divider %>
+          <% if current_event_manager %>
+            <%= drop_down "Manage Events" do %>
+              <%= menu_item "New Event", new_event_managers_event_path %>
+              <%= menu_item "Events", event_managers_events_path %>
+            <% end %>
+          <% elsif current_customer_service %>
+            <%= drop_down "Manage Event Managers" do %>
+              <%= menu_item "Event Managers", customer_services_event_managers_path %>
+            <% end %>
+          <% else %>
+            <%= menu_item "Event", events_path %>
+          <% end %>
+        <% end %>
+        <%= menu_group pull: :right do %>
+          <% if current_event_manager %>
+            <%= menu_item "Log Out", destroy_event_manager_session_path, :method => :delete %>
+          <% else %>
+            <%= menu_item "Log In", new_event_manager_session_path %>
+          <% end %>
+        <% end %>
+      <% end %>
+
       <div class="page-header">
         <p class="notice"><%= notice %></p>
         <p class="alert"><%= alert %></p>
       </div>
+
       <%= yield %>
     </div>
 
