Add helper to assist with generating the correct HTML for our flash messages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,8 +46,7 @@
       <% end %>
 
       <div class="page-header">
-        <p class="notice"><%= notice %></p>
-        <p class="alert"><%= alert %></p>
+        <%= flash_messages %>
       </div>
 
       <%= yield %>
