--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -14,9 +14,9 @@
   <tbody>
     <% @orders.each do |order| %>
       <tr>
-        <td><%= link_to order.id, event_order_path(id: order.id) %></td>
+        <td><%= link_to order.id, event_ticket_order_path(id: order.id) %></td>
         <td><%= order.number_of_tickets %></td>
-        <td><%= order.event %></td>
+        <td><%= @event.title %> - <%= @event.location %></td>
         <td><%=l order.created_at %></td>
       </tr>
     <% end %>
@@ -24,5 +24,5 @@
 </table>
 
 <%= link_to t('.new', :default => t("helpers.links.new")),
-            new_event_order_path(event_id: @event.id),
+            new_event_ticket_order_path(event_id: @event.id),
             :class => 'btn btn-primary' %>
