--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -9,17 +9,10 @@
   <dt><strong><%= model_class.human_attribute_name(:total_price) %>:</strong></dt>
   <dd><%= @order.total_price %></dd>
   <dt><strong><%= model_class.human_attribute_name(:ticket_purchaser_id) %>:</strong></dt>
-  <dd><%= @order.ticket_purchaser_id %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:event_id) %>:</strong></dt>
-  <dd><%= @order.event_id %></dd>
+  <dd><%= @order.ticket_purchaser.email %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:event) %>:</strong></dt>
+  <dd><%= @event.title %></dd>
 </dl>
 
 <%= link_to t('.back', :default => t("helpers.links.back")),
-              orders_path, :class => 'btn btn-default'  %>
-<%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_order_path(@order), :class => 'btn btn-default' %>
-<%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              order_path(@order),
-              :method => 'delete',
-              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-              :class => 'btn btn-danger' %>
+              event_ticket_orders_path, :class => 'btn btn-default'  %>
