--- a/app/views/event_managers/events/show.html.erb
+++ b/app/views/event_managers/events/show.html.erb
@@ -33,7 +33,7 @@
 <%= link_to t('.edit', :default => t("helpers.links.edit")),
               edit_event_managers_event_path(@event), :class => 'btn btn-default' %>
 <%= link_to 'Allocate Tickets',
-              new_event_managers_event_tickets_allocation_path(@event), :class => 'btn btn-default' %>
+              event_managers_event_tickets_allocations_path(event_id: @event.id), :class => 'btn btn-default' %>
 <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
               event_managers_event_path(@event),
               :method => 'delete',
