--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,11 @@
  *= require_tree .
  *= require_self
  */
+section.ticket h2,h3,h4,p {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
 section.ticket {
   border: solid thin;
   padding: 2px;
@@ -26,21 +31,28 @@ section.event-date {
 }
 
 section.information {
-  margin: 0px 0px 0px 40px;
-  width: 344px;
+  margin: 0;
+  width: auto;
+  height: inherit;
   float: left;
+  display: inline-block;
+  padding: 0px;
 }
 
 section.ticket-information {
   width: 150px;
   float: right;
-  top: 70px;
+  top: 60px;
   left: 20px;
   background: gray;
 }
 
 section.event {
-  float: right;
+  float: left;
+  display: inline-block;
+  position: relative;
+  right: 35px;
+  bottom: 60px;
 }
 
 section.fixed {
@@ -50,7 +62,7 @@ section.fixed {
 section.event-barcode {
   position: relative;
   top: 34px;
-  right: 45px;
+  right: 15px;
   float: left;
 }
 
@@ -77,3 +89,4 @@ table.barby-barcode { border-spacing: 0; }
 tr.barby-row {}
 td.barby-cell { width: 3px; height: 100px; }
 td.barby-cell.on { background: #000; }
+
