Update events so that we rely on OE data and improve on the way events are shown to event managers and ticket purchasers

--- a/app/views/event_managers/events/_form.html.erb
+++ b/app/views/event_managers/events/_form.html.erb
@@ -4,14 +4,22 @@
   <%= error_span(@event[:title]) %>
   <%= f.input :description %>
   <%= error_span(@event[:description]) %>
-  <%= f.input :dress_code %>
-  <%= error_span(@event[:dress_code]) %>
+  <%= f.input :dress_code_id, collection: DressCode.all, prompt: 'Select dress code' %>
+  <%= error_span(@event[:dress_code_id]) %>
   <%= f.input :venue %>
   <%= error_span(@event[:venue]) %>
-  <%= f.input :location %>
-  <%= error_span(@event[:location]) %>
-  <%= f.input :genre %>
-  <%= error_span(@event[:genre]) %>
+  <%= f.input :address_line1 %>
+  <%= error_span(@event[:address_line1]) %>
+  <%= f.input :address_line2 %>
+  <%= error_span(@event[:address_line2]) %>
+  <%= f.input :town_city %>
+  <%= error_span(@event[:town_city]) %>
+  <%= f.input :post_code %>
+  <%= error_span(@event[:post_code]) %>
+  <%= f.input :genre_id, collection: Genre.all, prompt: 'Select the Genre' %>
+  <%= error_span(@event[:genre_id]) %>
+  <%= f.input :event_type_id, collection: EventType.all, prompt: 'Select the event type' %>
+  <%= error_span(@event[:event_type_id]) %>
   <%= f.input :date_from %>
   <%= error_span(@event[:date_from]) %>
   <%= f.input :date_to %>
