--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -5,7 +5,6 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
       <th><%= model_class.human_attribute_name(:title) %></th>
       <th><%= model_class.human_attribute_name(:description) %></th>
       <th><%= model_class.human_attribute_name(:location) %></th>
@@ -16,16 +15,15 @@
       <th><%= model_class.human_attribute_name(:time_to) %></th>
       <th><%= model_class.human_attribute_name(:time_from) %></th>
       <th><%= model_class.human_attribute_name(:contact_number) %></th>
-      <th><%= model_class.human_attribute_name(:approved) %></th>
-      <th><%= model_class.human_attribute_name(:event_manager_id) %></th>
+      <th>Tickets types</th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
   <tbody>
     <% @events.each do |event| %>
+      <% unless event.tickets_allocations.empty? %>
       <tr class="event">
-        <td><%= link_to event.id, event_path(event) %></td>
         <td><%= event.title %></td>
         <td><%= event.description %></td>
         <td><%= event.location %></td>
@@ -36,14 +34,14 @@
         <td><%= event.time_to %></td>
         <td><%= event.time_from %></td>
         <td><%= event.contact_number %></td>
-        <td><%= event.approved %></td>
-        <td><%= event.event_manager_id %></td>
+        <td><%= event.tickets_allocations.count %></td>
         <td><%=l event.created_at %></td>
         <td>
           <%= link_to t('.show', :default => t("helpers.links.show")),
                       event_path(event), :class => 'btn btn-default btn-xs' %>
         </td>
       </tr>
+    <% end %>
     <% end %>
   </tbody>
 </table>
