--- a/app/views/ticket_purchaser_mailer/send_tickets.html.erb
+++ b/app/views/ticket_purchaser_mailer/send_tickets.html.erb
@@ -1,1 +1,15 @@
+Thank you for using House of Tickets.
+
+Please see your ticket confirmation
+
+See ticket attached.
+
+Event: <%= @event.title %>
+Date / Time: <%= @event.date %> - <%= @event.time_from %>
+Venue Address: <%= @event.location %>
+Qty: <%= @ticket_allocation.number_of_tickets %>
+Ticket Ref #
+
 <%= link_to event_ticket_orders_url(id: @order, event_id: @event.id, ticket_id: @tickets_allocation.id, format: :pdf), 'Link to downloadable copy of tickets' %>
+
+For any queries contact <%= mail_to info@officialtickets.co.uk %>
