Fix issue with sending out emails to ticket purchasers

--- a/app/views/ticket_purchaser_mailer/send_tickets.text.erb
+++ b/app/views/ticket_purchaser_mailer/send_tickets.text.erb
@@ -5,11 +5,11 @@ Please see your ticket confirmation
 See ticket attached.
 
 <%= @event.title %>
-Date / Time: <%= @event.date %> - <%= @event.time_from %>
+Date / Time: <%= @event.date_from %> - <%= @event.time_from %>
 Venue Address: <%= @event.location %>
-Qty: <%= @ticket_allocation.number_of_tickets %>
+Qty: <%= @order.number_of_tickets %>
 Ticket Ref #
 
-<%= link_to event_ticket_orders_url(id: @order, event_id: @event.id, ticket_id: @tickets_allocation.id, format: :pdf), 'Link to downloadable copy of tickets' %>
+<%= link_to event_ticket_orders_url(id: @order.id, event_id: @event.id, ticket_id: @tickets_allocation.id, format: :pdf), 'Link to downloadable copy of tickets' %>
 
-For any queries contact <%= mail_to info@officialtickets.co.uk %>
+For any queries contact <%= mail_to 'info@officialtickets.co.uk' %>
