--- a/app/views/layouts/print.html.erb
+++ b/app/views/layouts/print.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>OfficialTickets</title>
-    <%= wicked_pdf_stylesheet_link_tag 'application', media: :print -%>
+    <%= wicked_pdf_stylesheet_link_tag 'application' -%>
   </head>
   <body>
     <div class="container">
