--- a/app/views/event_managers/events/index.html.erb
+++ b/app/views/event_managers/events/index.html.erb
@@ -46,11 +46,13 @@
                       event_managers_event_path(event), :class => 'btn btn-default btn-xs' %>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
                       edit_event_managers_event_path(event), :class => 'btn btn-default btn-xs' %>
+          <% unless event.approved? %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
                       event_managers_event_path(event),
                       :method => :delete,
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                       :class => 'btn btn-xs btn-danger' %>
+          <% end %>
         </td>
       </tr>
     <% end %>
