Fix PDF link for in the email sent to ticket purchased when they've made an order

--- a/app/views/ticket_purchaser_mailer/send_tickets.html.erb
+++ b/app/views/ticket_purchaser_mailer/send_tickets.html.erb
@@ -10,6 +10,6 @@ Venue Address: <%= @event.location %>
 Qty: <%= @order.number_of_tickets %>
 Ticket Ref #
 
-<%= link_to event_ticket_orders_url(id: @order, event_id: @event.id, ticket_id: @tickets_allocation.id, format: :pdf), 'Link to downloadable copy of tickets' %>
+<%= link_to 'Link to downloadable copy of tickets', event_ticket_orders_url(id: @order, event_id: @event.id, ticket_id: @tickets_allocation.id, format: :pdf) %>
 
 For any queries contact <%= mail_to 'info@officialtickets.co.uk' %>
