Allow ticket purchasers to view all of their ticket orders easier

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,7 @@
           <%= menu_divider %>
           <% if current_ticket_purchaser %>
               <%= menu_item "Purchased Tickets", tickets_path %>
+              <%= menu_item "Orders", orders_path %>
           <% elsif current_event_manager %>
             <%= drop_down "Manage Events" do %>
               <%= menu_item "Current Events", event_managers_events_path %>
