--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -13,16 +13,13 @@
   </thead>
   <tbody>
     <% @orders.each do |order| %>
+      <% event = order.tickets_allocation.event %>
       <tr>
-        <td><%= link_to order.id, event_ticket_order_path(id: order.id) %></td>
+        <td><%= link_to order.id, event_ticket_order_path(id: order.id, event_id: event.id, ticket_id: order.tickets_allocation.id) %></td>
         <td><%= order.number_of_tickets %></td>
-        <td><%= @event.title %> - <%= @event.location %></td>
+        <td><%= event.title %> - <%= event.location %></td>
         <td><%=l order.created_at %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<%= link_to t('.new', :default => t("helpers.links.new")),
-            new_event_ticket_order_path(event_id: @event.id),
-            :class => 'btn btn-primary' %>
