--- a/app/views/ticket_purchaser_mailer/send_tickets.html.erb
+++ b/app/views/ticket_purchaser_mailer/send_tickets.html.erb
@@ -17,7 +17,7 @@ Qty: <%= @order.number_of_tickets %></br>
 Ticket Ref <%= @order.transaction_code %></br>
 
 <p>
-  <%= link_to 'Link to downloadable copy of tickets', event_ticket_orders_url(id: @order, event_id: @event.id, ticket_id: @tickets_allocation.id, format: :pdf) %>
+  <%= link_to 'Your Tickets', event_ticket_order_url(id: @order.id, event_id: @order.event_id, ticket_id: @order.tickets_allocation.id, format: :pdf) %>
 </p>
 
 <p>
